change z-index value and add position fixed to navRight

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -469,9 +469,10 @@ $lineHeight: 2px;
         left: 0;
         height: 100%;
         width: 100%;
+        background:#fff
+        position: fixed;
     }
     _::-webkit-full-page-media, _:future :root .open {
-        background-color: blue;
     }
     _::-webkit-full-page-media, _:future, :root .navItems {
         margin-top: 80px;
@@ -482,7 +483,7 @@ $lineHeight: 2px;
         height: 100%;
         padding-bottom: 200px;
         padding-top: 10px;
-        z-index: 200;
+        z-index: -1;
     }
     .navItems .subNavItems {
       background: none;
